Bugfix/E1-64 Added css code changes to address alignment issues

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/general-guide/100-general-guide.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/general-guide/100-general-guide.scss
@@ -1,10 +1,19 @@
 .general-guide {
-  .cmp-text ul li {
+  .cmp-text ul li,
+  .cmp-teaser__description ul,
+  .cmp_tabs--mobile .cmp-teaser__description ul li {
     list-style-type: none !important;
   }
 
-  .cmp-text ul li ol li {
+  .cmp-text ul li ol li,
+  .cmp_tabs--mobile .cmp-teaser__description ol li,
+  .cmp_tabs--mobile .cmp-teaser__description ul li ol li {
     list-style-type: decimal !important;
+  }
+
+  ul,
+  ol {
+    padding: 0 !important;
   }
 
   .wst-main-headings,
